--- a/src/css/quasar.variables.scss
+++ b/src/css/quasar.variables.scss
@@ -13,7 +13,7 @@
 // Tip: Use the "Theme Builder" on Quasar's documentation website.
 
 $primary: #282830;
-$secondary: #ff0022;
+$secondary: #54e2ac;
 $accent: #eff0f0;
 
 $dark: #1d1d1d;
